@@ -365,6 +365,18 @@ attribute, the new value and the old value."
   "Map face with height less than the tile size (16 pixels)."
   :group 'nethack-faces)
 
+(defface nethack-pet-face
+  `((((type tty) (class color))
+     (:foreground "black" :background "white" :bold t))
+    (((class color) (background dark))
+     (:foreground "black" :background "white"))
+    (((class color) (background light))
+     (:foreground "white" :background "black"))
+    (t (:foreground "gray")))
+  "nethack white"
+  :group 'nethack-faces)
+
+
 
 ;;; Process
 (defvar nh-proc nil)
